Add styling for navbar

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,4 @@
-@use './base/' as *;
-@use './layout/' as *;
-
-$red: red;
-
-body {
-  color: $red;
-}
+@use 'base' as *;
+@use 'layout' as *;
+@use 'components' as *;
+@use 'pages' as *;
