--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -1,3 +1,12 @@
 nav {
   display: flex;
+  justify-content: space-between;
+  max-width: 94rem;
+  margin: 0 auto;
+  padding: 1rem 0;
+
+  ul {
+    display: flex;
+    gap: 2rem;
+  }
 }
