--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,5 +1,10 @@
+@use '../utils/' as *;
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
 html {
   font-size: 62.5%;
+  font-family: $main-font;
 }
 
 body {
