--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,4 +1,4 @@
-@use '../utils/' as *;
+@use '../utils/'as *;
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
@@ -15,4 +15,8 @@ body {
 
 ul {
   list-style-type: none;
+}
+
+.d-none {
+  display: none;
 }
