--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,5 +1,6 @@
-@forward 'navbar';
 @forward 'pokemon-card';
 @forward 'modal';
 @forward 'icons';
 @forward 'buttons';
+@forward 'navbar';
+@forward 'home';
