--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,6 +1,13 @@
-$main-theme-color: #ea4f36;
 $dark-background-color: #303030;
 
+// Colors
+
+$main-light: #fff;
+$main-dark: #161616;
+$main-primary: #ff473d;
+$main-primary-acent: #FF645C;
+$main-secondary: #40ea6b;
+$main-secondary-acent: #5AED7E;
 // Fonts
 
-$main-font: 'lato', sans-serif;
+$main-font: 'Open Sans', sans-serif;
