--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -5,7 +5,6 @@
 html {
   font-size: 62.5%;
   font-family: $main-font;
-  
 }
 
 body {
@@ -17,6 +16,10 @@ body {
 
 ul {
   list-style-type: none;
+}
+
+a {
+  color: inherit;
 }
 
 .d-none {
