--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -9,6 +9,8 @@ nav {
   padding: 2rem;
 
   .logo-container {
+    z-index: 2;
+
     img {
       width: 40vw;
       max-width: 11rem;
@@ -18,6 +20,8 @@ nav {
 
   .mobile-hamburguer {
     @include flexCenter();
+
+    z-index: 2;
     position: absolute;
     right: 2rem;
     top: 3rem;
@@ -26,6 +30,26 @@ nav {
     &__icon {
       font-size: 2.5rem;
       color: $main-primary;
+    }
+  }
+
+  .nav-links {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 100vh;
+    min-width: 100vw;
+    padding: 15rem 4rem;
+    background: linear-gradient($main-primary, $main-primary-acent);
+    text-align: right;
+    display: flex;
+    flex-direction: column-reverse;
+    font-size: 3rem;
+    font-weight: 700;
+    color: $main-light;
+
+    & li:last-child {
+      margin-bottom: 2em;
     }
   }
 }
