Finish styles for menu mobile and change name of variables for main colors

--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -8,7 +8,7 @@
   min-height: 100vh;
   min-width: 100vw;
   text-align: center;
-  color: $main-light;
+  color: $color-light;
   padding: 12rem 3rem 5rem 3rem;
   display: flex;
   flex-direction: column;
