--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -8,7 +8,7 @@ footer {
   margin: 0 auto;
   padding: 1.5rem;
   color: white;
-  background: $main-dark;
+  background: $color-dark;
 
   @include flexCenter();
 }
