--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,13 +1,12 @@
-$dark-background-color: #303030;
-
-// Colors
-
-$main-light: #fff;
-$main-dark: #161616;
-$main-primary: #ff473d;
-$main-primary-acent: #FF645C;
-$main-secondary: #40ea6b;
-$main-secondary-acent: #5AED7E;
 // Fonts
 
 $main-font: 'Open Sans', sans-serif;
+
+// Colors
+
+$color-light: #fff;
+$color-dark: #161616;
+$color-primary: #ff473d;
+$color-primary-acent: #FF7770;
+$color-secondary: #40ea6b;
+$color-secondary-acent: #5AED7E;
