--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba($color: #000, $alpha: 0.5);
+  background: rgba($color-dark, 0.5);
   padding: 7rem 2rem;
   z-index: 1;
   visibility: hidden;
@@ -18,7 +18,7 @@
   }
 
   &__card {
-    background: white;
+    background: $color-light;
     padding: 5rem 2rem;
     border-radius: 0.5rem;
 
