--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -29,27 +29,47 @@ nav {
 
     &__icon {
       font-size: 2.5rem;
-      color: $main-primary;
+      color: $color-dark;
     }
   }
 
   .nav-links {
+    z-index: 1;
     position: absolute;
     top: 0;
     left: 0;
     min-height: 100vh;
     min-width: 100vw;
-    padding: 15rem 4rem;
-    background: linear-gradient($main-primary, $main-primary-acent);
+    padding: 20rem 4rem 4rem;
+    background: linear-gradient($color-primary, $color-primary-acent);
     text-align: right;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
     font-size: 3rem;
     font-weight: 700;
-    color: $main-light;
+    color: $color-light;
 
-    & li:last-child {
-      margin-bottom: 2em;
+    & li {
+      width: fit-content;
+      margin-top: 1.5em;
+      padding-bottom: 0.125em;
+      border-bottom: 0.15em solid transparent;
+
+      &:hover,
+      &:active {
+        color: $color-secondary-acent;
+        border-bottom: 0.15em solid $color-secondary-acent;
+      }
+
+      &:first-child {
+        margin-top: 0;
+      }
+
+      a {
+        text-decoration: none;
+      }
     }
   }
 }
