--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,3 +1,11 @@
+button {
+  border: none;
+  font-weight: 700;
+  font-size: 1.3rem;
+  padding: 1.25em 2.5rem;
+  border-radius: 1.25rem;
+}
+
 .like-btn {
   width: 32px;
   height: 32px;
