--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,7 +1,8 @@
 button {
   border: none;
-  font-weight: 700;
-  font-size: 1.3rem;
+  font-weight: 800;
+  font-size: 1.1rem;
+  letter-spacing: 0.05rem;
   padding: 1.25em 2.5rem;
   border-radius: 1.25rem;
 }
