--- a/src/scss/components/_pokemon-card.scss
+++ b/src/scss/components/_pokemon-card.scss
@@ -11,19 +11,19 @@
   align-items: center;
   box-shadow: 3px 3px 10px 0px rgba(0, 0, 0, 0.3);
   color: $color-dark;
+  background: $color-light;
 
   .pokemon-name {
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    border-top-left-radius: 2rem;
-    border-top-right-radius: 2rem;
-    border-bottom-right-radius: 50%;
+    top: 0.5rem;
+    left: 0.5rem;
+    right: 0.5rem;
+    border-top-left-radius: 1.5rem;
+    border-top-right-radius: 1.5rem;
     border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
     background: $color-primary-acent-2x;
     color: $color-primary;
-    width: 100%;
     padding-top: 6rem;
     padding-bottom: 12rem;
     text-align: center;
@@ -31,16 +31,17 @@
     font-weight: 900;
     letter-spacing: -0.04em;
     margin-bottom: 2rem;
-    
+
     // &::after {
     //   content: '';
     //   position: absolute;
-    //   top: 0;
-    //   left: 0;
-    //   width: 100%;
-    //   height: 10rem;
-    //   background: $color-secondary;
+    //   bottom: -6rem;
+    //   left: 50%;
+    //   width: 12rem;
+    //   height: 12rem;
+    //   background: $color-primary-acent;
     //   z-index: 1;
+    //   transform: translateX(-50%) rotate(45deg);
     // }
   }
 
