--- a/src/scss/utils/_animations.scss
+++ b/src/scss/utils/_animations.scss
@@ -114,3 +114,17 @@
     }
   }
 }
+
+@mixin fade($name) {
+  @keyframes #{$name} {
+    0% {
+      filter: blur(0);
+      filter: opacity(1);
+    }
+
+    100% {
+      filter: blur(10px);
+      filter: opacity(0);
+    }
+  }
+}
