--- a/src/scss/components/_pokemon-card.scss
+++ b/src/scss/components/_pokemon-card.scss
@@ -9,9 +9,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 3px 3px 10px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 3px 3px 10px 0 rgba(0, 0, 0, 0.3);
   color: $color-dark;
-  background: $color-light;
 
   .pokemon-name {
     position: absolute;
