--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -7,10 +7,10 @@ $main-font: 'Open Sans', sans-serif;
 $color-light: #fff;
 $color-dark: #161616;
 $color-primary: #ff473d;
-$color-primary-acent: #FF7770;
-$color-primary-acent-2x: #FFD8D6;
+$color-primary-acent: #ff7770;
+$color-primary-acent-2x: #ffd8d6;
 $color-secondary: #40ea6b;
-$color-secondary-acent: #5AED7E;
+$color-secondary-acent: #5aed7e;
 
 // Gradients
 
