--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -72,6 +72,10 @@ nav {
 
       a {
         text-decoration: none;
+
+        &.selected {
+          color: greenyellow;
+        }
       }
     }
 
