Add pokeball animations

--- a/src/scss/components/_icons.scss
+++ b/src/scss/components/_icons.scss
@@ -13,3 +13,27 @@
     @include spriteSheetPosition(-32px, 0);
   }
 }
+
+.pokeball-icon {
+  display: block;
+  position: relative;
+  bottom: 5rem;
+  width: 128px;
+  height: 128px;
+  background-image: url('../assets/pokeball-icon.png');
+  background-repeat: no-repeat;
+
+  @include spriteSheetPosition(-384px, 0);
+
+  &.open {
+    animation: openBall steps(5) 0.5s forwards;
+
+    @include spriteAnimation(openBall,0 ,0 ,-640px, 0);
+  }
+
+  &.close {
+    animation: closeBall steps(11) 0.5s forwards;
+
+    @include spriteAnimation(closeBall,-768px ,0 ,-2176px, 0);
+  }
+}
