--- a/src/scss/layout/_pokemon-section.scss
+++ b/src/scss/layout/_pokemon-section.scss
@@ -1,4 +1,5 @@
 @use '../utils/' as *;
+@use '../vendors/include-media'as *;
 
 .pokemons-section {
   display: grid;
@@ -6,5 +7,10 @@
   grid-template-columns: 1fr;
   gap: 5rem;
   width: 100%;
-  background: $gradient-primary;
+  max-width: 96rem;
+  margin: 0 auto;
+
+  @include media('>=tablet') {
+    grid-template-columns: 1fr 1fr;
+  }
 }
