Fix position for likes container desktop

--- a/src/scss/components/_pokemon-card.scss
+++ b/src/scss/components/_pokemon-card.scss
@@ -124,6 +124,11 @@
   }
 
   @include media('>=tablet') {
+    .likes-container {
+      bottom: 3rem;
+      right: 5rem;
+    }
+
     .img-container {
       width: 25rem;
       height: 25rem;
