Add small improvements to the UI

--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -6,7 +6,7 @@
   background-position: center;
   background-size: cover;
   min-height: 100vh;
-  min-width: 100vw;
+  width: 100%;
   text-align: center;
   color: $color-light;
   padding: 12rem 3rem 5rem 3rem;
