--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -76,7 +76,7 @@ nav {
         text-decoration: none;
 
         &.selected {
-          color: greenyellow;
+          color: $color-secondary;
         }
       }
     }
@@ -126,6 +126,7 @@ nav {
       & li {
         width: fit-content;
         margin: 0;
+        margin-right: 4rem;
         padding: 0;
         border-bottom: 0.15em solid transparent;
 
@@ -135,8 +136,8 @@ nav {
           border-bottom: 0.15em solid $color-secondary-acent;
         }
 
-        &:first-child {
-          margin-right: 4rem;
+        &:last-child {
+          margin-right: 0;
         }
 
         a {
