--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,8 +1,8 @@
 @use '../utils/' as *;
 
 footer {
-  position: fixed;
-  bottom: 0;
+  // position: static;
+  // bottom: 0;
   width: 100%;
   padding: 1.5rem;
   color: white;
