Fix position of pokeball-icon

--- a/src/scss/components/_icons.scss
+++ b/src/scss/components/_icons.scss
@@ -17,7 +17,8 @@
 .pokeball-icon {
   display: block;
   position: relative;
-  bottom: 5rem;
+  left: 4.4rem;
+  bottom: 4.5rem;
   width: 128px;
   height: 128px;
   background-image: url('../assets/pokeball-icon.png');
