--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -6,9 +6,37 @@
   top: 0;
   width: 100%;
   max-height: 100%;
-  background: rgba($color-dark, 0.5);
+  background: $gradient-primary;
+  // background: rgba($color-dark, 0.5);
+  height: 100vh;
   visibility: hidden;
   opacity: 0;
+
+  .loading-img {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    image-rendering: crisp-edges;
+    z-index: 2;
+
+    .psyduck-img {
+      display: block;
+      background-image: url('../assets/loading-psyduck.png');
+      width: 20rem;
+      height: 20rem;
+      position: absolute;
+      top: 50%;
+      animation: loading infinite steps(24) 2s;
+
+      @include spriteAnimation(loading, 0, 0, -4800px, 0);
+
+      &.hide {
+        animation: hide 0.2s forwards;
+
+        @include fade(hide);
+      }
+    }
+  }
 
   &--active {
     visibility: visible;
@@ -17,11 +45,12 @@
   }
 
   &__card {
+    @include flexCenter;
+
     padding: 5rem 1rem;
     background: $gradient-primary;
     color: $color-light;
-
-    @include flexCenter;
+    justify-content: start;
   }
 
   & hgroup {
@@ -168,5 +197,11 @@
     font-size: 2.5rem;
     color: $color-light;
     background: transparent;
+  }
+
+  .loaded {
+    animation: fadeIn reverse forwards 1s;
+
+    @include fade(fadeIn);
   }
 }
