Fix linter errors

--- a/src/scss/components/_shadows.scss
+++ b/src/scss/components/_shadows.scss
@@ -7,6 +7,6 @@
   border-radius: 50%;
   position: relative;
   bottom: 4rem;
-  background: rgba($color-dark, $alpha: .5);
+  background: rgba($color-dark, $alpha: 0.5);
   filter: blur(1.2rem);
 }
