Background for navbar

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,7 +1,14 @@
+@use '../utils' as *;
+
 header {
   position: fixed;
-  max-width: 96rem;
   top: 0;
-  width: 100%;
+  left: 0;
+  right: 0;
   z-index: 10;
+  min-height: 8.5rem;
+  display: flex;
+  justify-content: center;
+  background: $color-primary;
+  box-shadow: rgba($color: #000000, $alpha: 0.3) 0.2rem 0.2rem 0.3rem;
 }
