Add crisp-edges to image render on desktop modal

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -277,6 +277,7 @@
       justify-self: center;
       width: 30rem;
       height: 30rem;
+      image-rendering: crisp-edges;
     }
 
     &__comments {
